--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,9 @@ on:
       - '.github/workflows/**'
       - '!.github/workflows/build.yml'
       - '.github/jreleaser/changelog.tpl'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/PULL_REQUEST_TEMPLATE/**'
+      - '.github/dependabot.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
@@ -24,12 +27,36 @@ on:
       - '.github/workflows/**'
       - '!.github/workflows/build.yml'
       - '.github/jreleaser/changelog.tpl'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/PULL_REQUEST_TEMPLATE/**'
+      - '.github/dependabot.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
       - '.gitingore'
       - 'LICENSE'
       - 'NOTICE'
+  workflow_dispatch:
+    inputs:
+      profile:
+        description: 'Build profile to use'
+        type: choice
+        required: true
+        default: 'normal'
+        options:
+          - 'fast'
+          - 'normal'
+          - 'max'
+      reports:
+        description: 'Enable build reports'
+        type: boolean
+        required: true
+        default: false
+      skip_tests:
+        description: 'Skip test execution'
+        type: boolean
+        required: true
+        default: false
 
 permissions:
   contents: read
@@ -47,13 +74,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
         with:
           sparse-checkout: |
             docs/decisions
       - name: Lint ADR files
         # version: v20.0.0 - pinned to specific commit for security
-        uses: DavidAnson/markdownlint-cli2-action@992badcdf24e3b8eb7e87ff9287fe931bcb00c6e
+        uses: DavidAnson/markdownlint-cli2-action@07035fd053f7be764496c0f8d8f9f41f98305101
         with:
           globs: |
             docs/decisions/*.md
@@ -63,27 +90,57 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
       - name: Cache Maven packages
-        uses: actions/cache@v4
+        uses: actions/cache@v5
         with:
           path: ~/.m2
           key: "${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}"
           restore-keys: ${{ runner.os }}-m2
       - name: Cache SonarCloud packages
-        uses: actions/cache@v4
+        uses: actions/cache@v5
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: 24
+          cache: 'npm'
+          # Use a glob pattern to include all package-lock.json files
+          # This ensures the cache is unique based on ANY lock file change
+          cache-dependency-path: '**/package-lock.json'
       - name: Maven Build
         id: maven-build
         shell: bash
         run: |
           .github/scripts/jacoco-create-flag-files.sh
-          .devenv/scripts/build/build.sh
+
+          # Build command construction
+          BUILD_CMD=".devenv/scripts/build/build.sh"
+
+          # Add profile parameter
+          PROFILE="${{ github.event.inputs.profile || 'normal' }}"
+          BUILD_CMD="$BUILD_CMD --profile=$PROFILE"
+
+          # Add reports flag if enabled
+          REPORTS="${{ github.event.inputs.reports || 'false' }}"
+          if [ "$REPORTS" = "true" ]; then
+            BUILD_CMD="$BUILD_CMD --reports"
+          fi
+
+          # Add skip-tests flag if enabled
+          SKIP_TESTS="${{ github.event.inputs.skip_tests || 'false' }}"
+          if [ "$SKIP_TESTS" = "true" ]; then
+            BUILD_CMD="$BUILD_CMD --skip-tests"
+          fi
+
+          echo "ℹ️ Executing: $BUILD_CMD"
+          $BUILD_CMD
+
           ./mvnw --non-recursive org.jacoco:jacoco-maven-plugin:report-aggregate
       - name: Publish Test Report
         if: always()
@@ -93,7 +150,7 @@ jobs:
           require_passed_tests: true
       - name: Upload Surefire Reports
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: surefire-reports
           path: ${{ github.workspace }}/**/target/surefire-reports/**
@@ -104,10 +161,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: bash
-        run: ./mvnw org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=operaton_operaton
+        run: |
+          ./mvnw org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+          -Dsonar.projectKey=operaton_operaton \
+          -Dsonar.coverage.exclusions=qa/performance-tests-engine/**,\
+              qa/integration-tests-webapps/**,\
+              qa/integration-tests-engine/**,\
+              webapps/**
         continue-on-error: true
       - name: Cache build artifacts
-        uses: actions/cache/save@v4
+        uses: actions/cache/save@v5
         with:
           path: |
             distro/**/target/operaton-*.gz
@@ -122,11 +185,11 @@ jobs:
       GH_TOKEN: ${{ github.token }}
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
       - name: Restore build artifacts cache
-        uses: actions/cache/restore@v4
+        uses: actions/cache/restore@v5
         with:
           path: |
             distro/**/target/operaton-*.gz
@@ -145,7 +208,7 @@ jobs:
         run: gh cache delete ${{ github.run_id }}-build-artifacts
       - name: Upload distro Tomcat
         id: upload-distro-tomcat
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: Operaton (Tomcat ${{ env.TOMCAT_VERSION }} Bundle)
           path: distro/tomcat/distro/target/operaton-bpm-tomcat-${{ env.PROJECT_VERSION }}.tar.gz
@@ -153,7 +216,7 @@ jobs:
           retention-days: 10
       - name: Upload distro sql-scripts
         id: upload-distro-sql-scripts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: Operaton SQL Scripts
           path: distro/sql-script/target/operaton-sql-scripts-*.tar.gz
