--- a/.github/workflows/unit-tests-with-databases.yaml
+++ b/.github/workflows/unit-tests-with-databases.yaml
@@ -60,9 +60,11 @@ jobs:
 
       - name: Set up Java
         uses: actions/setup-java@v5
+        env:
+          JAVA_VERSION: ${{ github.event.inputs.java_version }}
         with:
           distribution: 'temurin'
-          java-version: ${{ fromJson(format('["{0}"]', github.event.inputs.java_version))[0] }}
+          java-version: ${{ env.JAVA_VERSION }}
 
       - name: Run Unit Tests
         id: maven-unit-tests
