--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -261,10 +261,27 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Notify Docker Repository
+        if: ${{github.event.inputs.dry_run == 'false' }}
+        env:
+          DOCKER_ACTION_DISPATCH_TOKEN: ${{ secrets.DOCKER_ACTION_DISPATCH_TOKEN }}
+        run: |
+          response=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
+            -H "Authorization: Bearer $DOCKER_ACTION_DISPATCH_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -d '{"ref":"main","inputs":{"version": "${{ needs.release_build.outputs.version}}","snapshot": "false"}}' \
+            https://api.github.com/repos/operaton/operaton-docker/actions/workflows/build-test-and-publish.yml/dispatches)
+          if [ "$response" -ne 204 ]; then
+            echo "Failed to notify Docker repository. HTTP response code: $response"
+            exit 1
+          fi
+
       - name: Check out the code
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
+          clean: true
 
       - name: Delete snapshot release
         if: ${{github.event.inputs.dry_run == 'false' }}
@@ -296,19 +313,4 @@ jobs:
         with:
           message: "[releng] Bump version to ${{steps.set-next-version.outputs.next_version}}"
           pull: '--rebase --autostash'
-
-      - name: Notify Docker Repository
-        if: ${{github.event.inputs.dry_run == 'false' }}
-        env:
-          DOCKER_ACTION_DISPATCH_TOKEN: ${{ secrets.DOCKER_ACTION_DISPATCH_TOKEN }}
-        run: |
-          response=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
-            -H "Authorization: Bearer $DOCKER_ACTION_DISPATCH_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            -d '{"ref":"main","inputs":{"version": "${{ needs.release_build.outputs.version}}","snapshot": "false"}}' \
-            https://api.github.com/repos/operaton/operaton-docker/actions/workflows/build-test-and-publish.yml/dispatches)
-          if [ "$response" -ne 204 ]; then
-            echo "Failed to notify Docker repository. HTTP response code: $response"
-            exit 1
-          fi
+        continue-on-error: true
