--- a/.github/workflows/check-for-new-contributor.yml
+++ b/.github/workflows/check-for-new-contributor.yml
@@ -28,7 +28,7 @@ jobs:
       github.event_name == 'pull_request_target' && 
       github.event.action == 'opened' && 
       github.event.pull_request.head.repo.full_name != github.repository &&
-      !contains(env.CONTRIBUTOR_WHITELIST, github.actor)
+      !contains(env.CONTRIBUTOR_WHITELIST, github.event.pull_request.user.login)
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
@@ -90,7 +90,7 @@ jobs:
     if: |
       github.event_name == 'issues' && 
       github.event.action == 'opened' &&
-      !contains(env.CONTRIBUTOR_WHITELIST, github.actor)
+      !contains(env.CONTRIBUTOR_WHITELIST, github.event.pull_request.user.login)
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
@@ -144,7 +144,7 @@ jobs:
     if: |
       github.event_name == 'issue_comment' && 
       github.event.action == 'created' &&
-      !contains(env.CONTRIBUTOR_WHITELIST, github.actor)
+      !contains(env.CONTRIBUTOR_WHITELIST, github.event.pull_request.user.login)
     steps:
       - uses: actions/checkout@v6
       - uses: actions/github-script@v8
