chore(ci): Whitelist version.undertow for auto-nerge
This is only a test dependency

--- a/.github/auto-merge.config.yml
+++ b/.github/auto-merge.config.yml
@@ -60,6 +60,7 @@ auto-merge-rules:
       - 'version.logback'
       - 'version.jna'
       - 'version.asm'
+      - 'version.undertow'
       - 'okhttp-version'
       # Maven plugins
       - 'org.apache.maven.plugins'
