--- a/webapps/frontend/package.json
+++ b/webapps/frontend/package.json
@@ -20,6 +20,7 @@
     "@bpmn-io/dmn-migrate": "0.5.0",
     "@bpmn-io/form-js": "1.8.7",
     "@ibm/plex": "6.4.1",
+    "@popperjs/core": "2.11.8",
     "angular": "1.8.3",
     "angular-animate": "1.8.3",
     "angular-cookies": "1.8.3",
@@ -31,8 +32,9 @@
     "angular-sanitize": "1.8.3",
     "angular-touch": "1.8.3",
     "angular-translate": "2.19.1",
-    "angular-ui-bootstrap": "2.5.6",
-    "bootstrap": "3.4.1",
+    "ui-bootstrap4": "3.0.6",
+    "bootstrap": "4.0.0",
+    "bootstrap-icons": "^1.13.1",
     "bpmn-font": "0.12.1",
     "bpmn-js": "18.9.1",
     "camunda-dmn-js": "3.2.0",
@@ -56,6 +58,7 @@
     "lodash": "4.17.21",
     "moment": "2.30.1",
     "mousetrap": "1.6.5",
+    "popper.js": "^1.16.1",
     "q": "1.5.1",
     "requirejs": "2.3.7",
     "requirejs-angular-define": "https://github.com/camunda/requirejs-angular-define.git#aaa450a66e4d1a0588819804e1098c541bed585d",
@@ -63,11 +66,11 @@
   },
   "devDependencies": {
     "@babel/core": "7.28.5",
-    "@babel/plugin-transform-object-rest-spread": "7.28.4",
+    "@babel/eslint-parser": "7.28.5",
     "@babel/plugin-transform-object-assign": "7.27.1",
+    "@babel/plugin-transform-object-rest-spread": "7.28.4",
     "@babel/preset-env": "7.28.5",
     "angular-mocks": "1.8.3",
-    "@babel/eslint-parser": "7.28.5",
     "babel-loader": "10.0.0",
     "copy-webpack-plugin": "13.0.1",
     "css-loader": "6.10.0",
@@ -82,12 +85,14 @@
     "html-webpack-plugin": "5.6.5",
     "karma": "6.4.2",
     "karma-webpack": "5.0.1",
-    "less": "4.2.0",
-    "less-loader": "12.3.0",
     "license-checker": "25.0.1",
     "mini-css-extract-plugin": "2.9.4",
+    "postcss-loader": "8.2.0",
     "prettier": "3.7.4",
     "raw-loader": "4.0.2",
+    "sass": "1.97.0",
+    "sass-loader": "16.0.6",
+    "style-loader": "4.0.0",
     "svg-inline-loader": "0.8.2",
     "terser-webpack-plugin": "5.3.16",
     "webpack": "5.104.0",
