chore(ci): Make sure that nightly trigger will result in a release

--- a/.github/workflows/nightly-trigger.yml
+++ b/.github/workflows/nightly-trigger.yml
@@ -84,7 +84,7 @@ jobs:
               "ref": "${{ matrix.branch }}",
               "inputs": {
                 "java_version": "[\"17\", \"21\", \"25\"]",
-                "skip_build": "true",
+                "skip_build": "false",
                 "skip_tests": "false",
                 "integration_tests": "true",
                 "testsuite": "[\"engine\", \"webapps\"]",
