chore(ci): Add io.undertow:undertow-servlet to auto-merge

--- a/.github/auto-merge.config.yml
+++ b/.github/auto-merge.config.yml
@@ -51,6 +51,7 @@ auto-merge-rules:
       - 'com.h2database:h2'
       - 'io.netty:*'
       - 'io.swagger*'
+      - 'io.undertow:undertow-servlet'
       - 'net.javacrumbs.json-unit:*'
       # version properties
       - 'version.spring-boot'
