--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -97,6 +97,97 @@ updates:
       - "dependencies:devcontainers"
     milestone: 10
 
+  # Release 2.0.x branch - all updates
+  - package-ecosystem: "maven"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      time: "01:00"
+    reviewers:
+      - "kthoms"
+    target-branch: "release/2.0.x"
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "org.jruby:*"
+        update-types: ["version-update:semver-major", "version-update:semver-minor"]
+    labels:
+      - "dependencies:maven"
+    milestone: 10
+    groups:
+      httpcomponents5:
+        patterns:
+          - "org.apache.httpcomponents.core5:*"
+          - "org.apache.httpcomponents.client5:*"
+      httpcomponents4:
+        patterns:
+          - "org.apache.httpcomponents:*"
+  - package-ecosystem: "npm"
+    directory: "/webapps/frontend"
+    schedule:
+      interval: "weekly"
+    reviewers:
+      - "kthoms"
+    target-branch: "release/2.0.x"
+    labels:
+      - "dependencies:npm"
+    milestone: 10
+    groups:
+      angular:
+        patterns:
+          - "angular*"
+      babel:
+        patterns:
+          - "@babel/core"
+          - "@babel/preset-env"
+          - "@babel/eslint-parser"
+      dmn-js:
+        patterns:
+          - "dmn-js"
+          - "dmn-js-decision-table"
+          - "dmn-js-drd"
+          - "dmn-js-literal-expression"
+          - "dmn-js-shared"
+      eslint:
+        patterns:
+          - "eslint*"
+          - "prettier"
+      webpack:
+        patterns:
+          - "webpack*"
+  - package-ecosystem: "npm"
+    directory: "/engine-rest/docs"
+    schedule:
+      interval: "weekly"
+    reviewers:
+      - "kthoms"
+    target-branch: "release/2.0.x"
+    labels:
+      - "dependencies:npm"
+    milestone: 10
+    groups:
+      react:
+        patterns:
+          - "react*"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    reviewers:
+      - "kthoms"
+    target-branch: "release/2.0.x"
+    labels:
+      - "dependencies:github-action"
+    milestone: 10
+  - package-ecosystem: "devcontainers"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    target-branch: "release/2.0.x"
+    labels:
+      - "dependencies:devcontainers"
+    milestone: 10
+
   # Release 1.0.x branch - patch updates only
   - package-ecosystem: "maven"
     directory: "/"
