chore(ci): Add io.rest-assured:rest-assured for auto-merge

--- a/.github/auto-merge.config.yml
+++ b/.github/auto-merge.config.yml
@@ -50,6 +50,7 @@ auto-merge-rules:
       - 'org.seleniumhq.selenium:selenium-java'
       - 'com.h2database:h2'
       - 'io.netty:*'
+      - 'io.rest-assured:rest-assured'
       - 'io.swagger*'
       - 'io.undertow:undertow-servlet'
       - 'net.javacrumbs.json-unit:*'
