--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -321,6 +321,7 @@ jobs:
         uses: actions/cache/save@v5
         with:
           path: |
+            ~/.m2/repository/org/operaton
             distro/**/*.tar.gz
             distro/**/*.zip
             distro/webjar/target/operaton-webapp-webjar-*.jar
@@ -455,6 +456,7 @@ jobs:
         uses: actions/cache@v5
         with:
           path: |
+            ~/.m2/repository/org/operaton
             distro/**/*.tar.gz
             distro/**/*.zip
             distro/webjar/target/operaton-webapp-webjar-*.jar
@@ -483,6 +485,8 @@ jobs:
           JRELEASER_GPG_PASSPHRASE: ${{secrets.GPG_PASSPHRASE}}
           JRELEASER_MAVENCENTRAL_USERNAME: ${{secrets.OSSRH_USERNAME}}
           JRELEASER_MAVENCENTRAL_PASSWORD: ${{secrets.OSSRH_PASSWORD}}
+          JRELEASER_NEXUS2_SNAPSHOT_DEPLOY_USERNAME: ${{secrets.OSSRH_USERNAME}}
+          JRELEASER_NEXUS2_SNAPSHOT_DEPLOY_PASSWORD: ${{secrets.OSSRH_PASSWORD}}
           JRELEASER_DRY_RUN: ${{ github.event_name == 'schedule' && false || github.event.inputs.dry_run }}
           JRELEASER_PRERELEASE_ENABLED: true
           JRELEASER_PROJECT_SNAPSHOT_LABEL: ${{needs.build.outputs.project_version}}
