chore(ci): Configure snapshotSupported

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -181,6 +181,7 @@ deploy:
       snapshot-deploy:
         active: SNAPSHOT
         snapshotUrl: https://central.sonatype.com/repository/maven-snapshots/
+        snapshotSupported: true
         applyMavenCentralRules: true
         snapshotSupported: true
         closeRepository: true
