chore(ci): Add version.jackson for auto-merge

--- a/.github/auto-merge.config.yml
+++ b/.github/auto-merge.config.yml
@@ -61,6 +61,7 @@ auto-merge-rules:
       - 'version.mockito'
       - 'version.groovy'
       - 'version.logback'
+      - 'version.jackson'
       - 'version.jna'
       - 'version.asm'
       - 'version.undertow'
