chore(ci): Revert change to MavenCentral deployment

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -170,14 +170,13 @@ deploy:
   maven:
     mavenCentral:
       MavenCentral:
-        active: ALWAYS
+        active: RELEASE
         applyMavenCentralRules: true
         url: https://central.sonatype.com/api/v1/publisher
         stagingRepositories:
           - target/staging-deploy
         retryDelay: 30
         maxRetries: 99
-        snapshotSupported: true
     nexus2:
       snapshot-deploy:
         active: SNAPSHOT
