chore(ci): Enhance Integration Build & release workflow (#2128)
Improve the integration-build workflow:
- Provide better descriptions for input parameters
- Cache & restore created artifacts from local maven repo

Skip deployment of operaton-bpm-junit6:
This artifact does not provide Javadoc & sources, which causes trouble with Maven Central deployment

Added Nexus2 deployment for snapshot releases

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -177,6 +177,17 @@ deploy:
           - target/staging-deploy
         retryDelay: 30
         maxRetries: 99
+    nexus2:
+      snapshot-deploy:
+        active: SNAPSHOT
+        snapshotUrl: https://s01.oss.sonatype.org/content/repositories/snapshots
+        snapshotSupported: true
+        applyMavenCentralRules: true
+        snapshotSupported: true
+        closeRepository: true
+        releaseRepository: true
+        stagingRepositories:
+          - target/staging-deploy
     pomchecker:
       # Could be enabled when all POMs have <description> tag, see https://github.com/operaton/operaton/issues/293
       strict: false
