chore(ci): Allow Publish job to fail
The jon occasionally fails when Dependabot raises multiple PRs causing multiple parallel builds.
Restoring the artifacts from cache might fail because the cache has been evacuated. The build artifacts are not that important.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -204,6 +204,7 @@ jobs:
       actions: write
     env:
       GH_TOKEN: ${{ github.token }}
+    continue-on-error: true
     steps:
       - name: Checkout Code
         uses: actions/checkout@v6
