chore(ci): Build workflow: Add ignore paths: auto-merge.yml, jreleaser.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,14 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/PULL_REQUEST_TEMPLATE/**'
       - '.github/dependabot.yml'
+      - '.github/workflows/auto-merge.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
       - '.gitingore'
       - 'LICENSE'
       - 'NOTICE'
+      - 'jreleaser.yml'
   pull_request:
     branches:
       - main
