refactor(junit): Add missing dependency

--- a/examples/invoice/pom.xml
+++ b/examples/invoice/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
