--- a/webapps/frontend/package.json
+++ b/webapps/frontend/package.json
@@ -32,7 +32,6 @@
     "angular-sanitize": "1.8.3",
     "angular-touch": "1.8.3",
     "angular-translate": "2.19.1",
-    "ui-bootstrap4": "3.0.6",
     "bootstrap": "4.0.0",
     "bootstrap-icons": "^1.13.1",
     "bpmn-font": "0.12.1",
@@ -62,15 +61,16 @@
     "q": "1.5.1",
     "requirejs": "2.3.8",
     "requirejs-angular-define": "https://github.com/camunda/requirejs-angular-define.git#aaa450a66e4d1a0588819804e1098c541bed585d",
-    "superagent": "10.3.0"
+    "superagent": "10.3.0",
+    "ui-bootstrap4": "3.0.6"
   },
   "devDependencies": {
     "@babel/core": "7.28.6",
-    "@babel/plugin-transform-object-rest-spread": "7.28.6",
+    "@babel/eslint-parser": "7.28.6",
     "@babel/plugin-transform-object-assign": "7.27.1",
+    "@babel/plugin-transform-object-rest-spread": "7.28.6",
     "@babel/preset-env": "7.28.6",
     "angular-mocks": "1.8.3",
-    "@babel/eslint-parser": "7.28.6",
     "babel-loader": "10.0.0",
     "copy-webpack-plugin": "13.0.1",
     "css-loader": "7.1.2",
@@ -92,7 +92,6 @@
     "raw-loader": "4.0.2",
     "sass": "1.97.0",
     "sass-loader": "16.0.6",
-    "style-loader": "4.0.0",
     "svg-inline-loader": "0.8.2",
     "terser-webpack-plugin": "5.3.16",
     "webpack": "5.104.1",
