--- a/distro/wildfly/subsystem/pom.xml
+++ b/distro/wildfly/subsystem/pom.xml
@@ -33,6 +33,15 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- Override jgroups -->
+    <!-- org.wildfly:wildfly-connector:jar:37.0.1.Final:provided depends on org.jgroups:jgroups:jar:5.4.9.Final:provided -->
+    <!-- jgroups 5.4.9.Final is not on Maven Central -->
+    <dependency>
+      <groupId>org.jgroups</groupId>
+      <artifactId>jgroups</artifactId>
+      <version>5.4.12.Final</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.wildfly</groupId>
       <artifactId>wildfly-ejb3</artifactId>
