--- a/qa/test-db-util/pom.xml
+++ b/qa/test-db-util/pom.xml
@@ -36,6 +36,12 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
