chore(ci): Update auto-merge.config.yml
Add:
- commons-codec:commons-codec
- org.apache.commons:commons-lang3
- org.jboss.logging:jboss-logging
- org.jboss.weld.servlet:weld-servlet-shaded

--- a/.github/auto-merge.config.yml
+++ b/.github/auto-merge.config.yml
@@ -46,10 +46,14 @@ auto-merge-rules:
       - 'com.fasterxml.uuid:java-uuid-generator'
       - 'com.unboundid:unboundid-ldapsdk'
       - 'com.nimbusds:nimbus-jose-jwt'
+      - 'commons-codec:commons-codec'
       - 'io.smallrye:jandex'
       - 'joda-time:joda-time'
+      - 'org.apache.commons:commons-lang3'
       - 'org.xmlunit:xmlunit-core'
       - 'org.wiremock:wiremock'
+      - 'org.jboss.logging:jboss-logging'
+      - 'org.jboss.weld.servlet:weld-servlet-shaded'
       - 'com.jayway.jsonpath:json-path'
       - 'org.openapitools:jackson-databind-nullable'
       - 'org.seleniumhq.selenium:selenium-java'
